--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <script>
   const supabase = supabase.createClient(
     'https://ajuzonfhftbknlmzqygw.supabase.co',
-    'SUA-CHAVE-API'
+    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFqdXpvbmZoZnRia25sbXpxeWd3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU0MzgwNzYsImV4cCI6MjA2MTAxNDA3Nn0.E_DiHTcVkcafm4tgQfm1bvCYwNEPHb6kxDHpuKqki2w'
   );
 
   let categorias = [];
