--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 
 <script>
-  const supabase = supabase.createClient(
+  const supabaseClient = supabase.createClient(
     'https://ajuzonfhftbknlmzqygw.supabase.co',
     'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFqdXpvbmZoZnRia25sbXpxeWd3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU0MzgwNzYsImV4cCI6MjA2MTAxNDA3Nn0.E_DiHTcVkcafm4tgQfm1bvCYwNEPHb6kxDHpuKqki2w'
   );
@@ -61,7 +61,7 @@
   const mensagemNenhumProduto = document.getElementById('mensagemNenhumProduto');
 
   async function carregarDados() {
-    const { data, error } = await supabase
+    const { data, error } = await supabaseClient
       .from('cardapio')
       .select()
       .eq('id', 1)
@@ -213,5 +213,6 @@
 </script>
 </body>
 </html>
+
 
 
