--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   </div>
 
 <script>
+  window.onload = () => {
   const supabaseClient = supabase.createClient(
     'https://ajuzonfhftbknlmzqygw.supabase.co',
     'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFqdXpvbmZoZnRia25sbXpxeWd3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU0MzgwNzYsImV4cCI6MjA2MTAxNDA3Nn0.E_DiHTcVkcafm4tgQfm1bvCYwNEPHb6kxDHpuKqki2w'
@@ -209,7 +210,8 @@
     window.open(link, '_blank');
   }
 
-  window.onload = carregarDados;
+carregarDados();
+  };
 </script>
 
 </body>
