--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     let total = selecionados.reduce((soma, p) => soma + (parseFloat(p.preco) * p.quantidade), 0);
     msg += `%0ATotal: R$ ${total.toFixed(2)}`;
 
-    const link = `https://wa.me/SEUNUMERO?text=${msg}`;
+    const link = `https://wa.me/5514982006515?text=${msg}`;
     window.open(link, '_blank');
   }
 
