--- a/index.html
+++ b/index.html
@@ -189,26 +189,29 @@
   }
 
   function enviarPedido() {
-    const nome = document.getElementById('nomeCliente').value.trim();
-    if (!nome) return alert('Por favor, informe seu nome!');
-    let endereco = document.getElementById('enderecoCliente').value.trim();
-    let obs = document.getElementById('observacoes').value.trim();
+  const nome = document.getElementById('nomeCliente').value.trim();
+  if (!nome) return alert('Por favor, informe seu nome!');
+  const endereco = document.getElementById('enderecoCliente').value.trim();
+  const obs = document.getElementById('observacoes').value.trim();
 
-    let msg = `Olá, meu nome é ${nome}%0A`;
-    if (endereco) msg += `Endereço: ${endereco}%0A`;
-    if (obs) msg += `Observações: ${obs}%0A`;
-    msg += `%0AMeu pedido:%0A`;
+  let msg = `Olá, meu nome é ${nome}\n`;
+  if (endereco) msg += `Endereço: ${endereco}\n`;
+  if (obs) msg += `Observações: ${obs}\n`;
+  msg += `\nMeu pedido:\n`;
 
-    selecionados.forEach(p => {
-      msg += `- ${p.quantidade}x ${p.nome} (R$ ${(p.preco * p.quantidade).toFixed(2)})%0A`;
-    });
+  selecionados.forEach(p => {
+    msg += `- ${p.quantidade}x ${p.nome} (R$ ${(p.preco * p.quantidade).toFixed(2)})\n`;
+  });
 
-    let total = selecionados.reduce((soma, p) => soma + (parseFloat(p.preco) * p.quantidade), 0);
-    msg += `%0ATotal: R$ ${total.toFixed(2)}`;
+  const total = selecionados.reduce((soma, p) => soma + (parseFloat(p.preco) * p.quantidade), 0);
+  msg += `\nTotal: R$ ${total.toFixed(2)}`;
 
-    const link = `https://wa.me/5514982006515?text=${msg}`;
-    window.open(link, '_blank');
-  }
+  // Codifica a mensagem para URL
+  const encodedMsg = encodeURIComponent(msg);
+  const link = `https://wa.me/5514982006515?text=${encodedMsg}`;
+  window.open(link, '_blank');
+}
+
 
 carregarDados();
   };
